--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <p id="stop-clock-result" class="text-lg font-semibold mb-4 min-h-[1.5em]"></p>
             
-            <button id="stop-clock-button" class="w-full bg-rose-600 text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-pink-600 transition-colors active:scale-95 disabled:bg-gray-400 disabled:cursor-not-allowed">
+            <button id="stop-clock-button" class="w-full bg-rose-600 text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-rose-700 transition-colors active:scale-95 disabled:bg-gray-400 disabled:cursor-not-allowed">
               Start
             </button>
             <button id="show-stop-clock-terms-button" class="text-xs text-gray-400 mt-4 underline hover:text-gray-600 transition-colors">Terms & Conditions apply.</button>
@@ -478,4 +478,5 @@
 
     </body>
   </html>
+
 
