--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Poaster Coaster</title>
       <script src="https://cdn.tailwindcss.com"></script>
-      <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;600;700&display=swap" rel="stylesheet">
       <style>
         body {
           font-family: 'Poppins', sans-serif;
@@ -14,9 +15,15 @@
         .hidden {
           display: none;
         }
-        #custom-month-select-button[aria-expanded="true"] > #custom-month-select-arrow {
-          transform: rotate(180deg);
-        }
+      #custom-month-select-button[aria-expanded="true"] > #custom-month-select-arrow {
+        transform: rotate(180deg);
+      }
+      #stop-clock-timer {
+        font-family: 'Orbitron', monospace;
+        color: #ff1a1a;
+        letter-spacing: 0.25em;
+        text-shadow: 0 0 12px rgba(255, 26, 26, 0.6);
+      }
       </style>
     <script type="importmap">
   {
@@ -60,8 +67,8 @@
             <h2 class="text-2xl font-bold text-gray-800 mb-2">Stop at 10 to Win!</h2>
             <p class="text-gray-600 mb-6">Think you have perfect timing? Stop it bang on 10.00 and score a FREE drink!</p>
             
-            <div class="bg-gray-100 rounded-xl p-4 my-6">
-              <p id="stop-clock-timer" class="text-6xl font-bold font-mono text-gray-800 select-none">0.00</p>
+          <div class="bg-black rounded-lg p-6 my-6 border border-gray-800 shadow-inner flex items-center justify-center">
+            <p id="stop-clock-timer" class="text-6xl font-bold select-none">0.00</p>
             </div>
             <p id="stop-clock-result" class="text-lg font-semibold mb-4 min-h-[1.5em]"></p>
             
@@ -478,5 +485,3 @@
 
     </body>
   </html>
-
-
