--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             <!-- Finished Screen -->
             <div id="trivia-finished-screen" class="hidden text-center">
               <div class="mx-auto bg-yellow-100 w-16 h-16 rounded-2xl flex items-center justify-center mb-4">
-                <span class="text-4xl">Ã°Å¸â€˜Â</span>
+                <span class="text-4xl">🎉</span>
               </div>
               <h2 class="text-2xl font-bold text-gray-800 mb-2">Trivia Complete!</h2>
               <p class="text-gray-600 mb-4">You scored</p>
@@ -160,7 +160,7 @@
           <div id="birthday-club-card" class="bg-white rounded-2xl p-6 shadow-lg text-center">
               <div id="birthday-initial-view">
                   <div class="mx-auto bg-teal-100 w-16 h-16 rounded-2xl flex items-center justify-center mb-4">
-                      <span class="text-4xl">Ã°Å¸Å½â€š</span>
+                      <span class="text-4xl">🎂</span>
                   </div>
                   <h2 id="birthday-club-title" class="text-2xl font-bold text-gray-800 mb-2">Join The Birthday Club!</h2>
                   <p id="birthday-club-description" class="text-gray-600 mb-6"></p>
@@ -227,7 +227,7 @@
               </div>
               <div id="birthday-thanks-view" class="hidden">
                   <div class="mx-auto bg-teal-100 w-16 h-16 rounded-2xl flex items-center justify-center mb-4">
-                      <span class="text-4xl">Ã°Å¸Å½â€°</span>
+                      <span class="text-4xl">🎁</span>
                   </div>
                   <h2 class="text-2xl font-bold text-gray-800 mb-2">You're all set!</h2>
                   <p class="text-gray-600">Thanks for signing up! We'll send you a treat on your birthday week.</p>
@@ -288,11 +288,11 @@
               <a id="google-review-link" href="#" target="_blank" rel="noopener noreferrer" class="hidden"></a>
 
               <div id="review-initial-state">
-                  <div id="review-emoji-ratings" class="flex justify-center space-x-4">
-                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="negative">Ã°Å¸ËœÂ </button>
-                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="negative">Ã°Å¸ËœÂ</button>
-                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="positive">Ã°Å¸ËœÅ </button>
-                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="positive">Ã°Å¸ËœÂ</button>
+                                    <div id="review-emoji-ratings" class="flex justify-center space-x-4">
+                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="negative">😡</button>
+                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="negative">🙁</button>
+                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="positive">🙂</button>
+                      <button class="text-4xl p-2 rounded-full transition-transform transform hover:scale-125 focus:outline-none" data-sentiment="positive">😍</button>
                   </div>
               </div>
 
