--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
               <button
                 id="play-again-button"
-                class="mt-6 w-full bg-[#004225] text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-[#00351e] transition-colors"
+                class="mt-6 w-full bg-gray-200 text-gray-700 font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-gray-300 transition-colors"
               >
                 Play Again
               </button>
@@ -522,3 +522,4 @@
 
     </body>
   </html>
+
