--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
               </form>
 
               <div id="review-feedback-thanks" class="hidden">
-                  <p class="text-xl font-semibold text-green-600">Thanks for your feedback!</p>
+                  <p class="text-xl font-semibold text-green-600">We appreciate your feedback!</p>
               </div>
           </div>
           
@@ -522,4 +522,5 @@
 
     </body>
   </html>
+
 
