--- a/index.html
+++ b/index.html
@@ -23,9 +23,16 @@
       #stop-clock-timer {
         font-family: 'DS-Digital', 'Share Tech Mono', 'Orbitron', sans-serif;
         font-weight: 400;
+        font-size: 5.5rem;
+        line-height: 1;
         color: #ff1a1a;
         letter-spacing: 3px;
         text-shadow: 0 0 12px rgba(255, 26, 26, 0.6);
+        font-variant-numeric: tabular-nums;
+        font-feature-settings: 'tnum';
+        display: inline-block;
+        min-width: 7ch;
+        text-align: center;
       }
       </style>
     <script type="importmap">
