--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
       <!-- Terms & Conditions Modal -->
       <div id="terms-modal" class="hidden fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center p-4 z-50">
           <div class="bg-white rounded-2xl shadow-2xl max-w-3xl w-full max-h-[85vh] overflow-hidden">
-              <div class="flex items-start justify-between px-6 pt-6">
-                  <h2 class="text-2xl font-bold text-gray-800">Taple Terms &amp; Conditions</h2>
-                  <button id="close-terms-button" class="text-gray-400 hover:text-gray-600 transition-colors text-2xl leading-none">
+              <div class="relative px-6 pt-6 pb-4">
+                  <h2 class="text-2xl font-bold text-gray-800 pr-10">Taple Terms &amp; Conditions</h2>
+                  <button id="close-terms-button" class="absolute top-4 right-4 text-gray-400 hover:text-gray-600 transition-colors text-2xl leading-none">
                       <span aria-hidden="true">&times;</span>
                       <span class="sr-only">Close Terms &amp; Conditions</span>
                   </button>
