--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             <img id="pub-logo" src="" alt="Pub logo" class="w-16 h-16 rounded-2xl shadow-md flex-shrink-0" />
             <div>
               <p class="text-sm text-gray-500 -mb-1">Welcome to</p>
-              <h1 id="pub-name" class="text-2xl font-bold text-[#004225]"></h1>
+              <h1 id="pub-name" class="text-2xl font-bold text-gray-800"></h1>
               <p id="pub-address" class="text-sm text-gray-500"></p>
               <div class="flex items-center space-x-3 mt-2">
                 <a id="pub-instagram-link" href="#" target="_blank" rel="noopener noreferrer" aria-label="Instagram" class="text-gray-500 hover:text-gray-800 transition-colors">
@@ -364,7 +364,7 @@
         
         <!-- Footer -->
         <footer class="text-center py-4">
-          <p class="text-sm text-gray-500 flex items-center justify-center gap-3">
+          <p class="text-sm text-gray-700 flex items-center justify-center gap-2">
             <span class="lowercase">powered by</span>
             <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/690916718681773d7e063358_taple.png" alt="Taple" class="h-5 w-auto">
           </p>
