--- a/index.html
+++ b/index.html
@@ -43,6 +43,78 @@
       #stop-clock-timer span[data-char="."] {
         width: 0.8ch;
       }
+
+      .loading-overlay {
+        position: fixed;
+        inset: 0;
+        background-color: #ffda53;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        z-index: 9999;
+        transition: opacity 0.4s ease;
+      }
+
+      .loading-overlay--hidden {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      .loading-content {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 16px;
+        text-align: center;
+      }
+
+      .loading-logo {
+        position: relative;
+        display: inline-flex;
+        padding: 12px 18px;
+        border-radius: 18px;
+        background-color: rgba(255, 255, 255, 0.9);
+        overflow: hidden;
+        box-shadow: 0 10px 30px rgba(0, 0, 0, 0.08);
+      }
+
+      .loading-logo-image {
+        width: clamp(140px, 45vw, 220px);
+        height: auto;
+      }
+
+      .loading-logo::after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(
+          90deg,
+          rgba(255, 255, 255, 0) 0%,
+          rgba(255, 255, 255, 0.7) 50%,
+          rgba(255, 255, 255, 0) 100%
+        );
+        animation: shimmer 1.8s infinite;
+      }
+
+      .loading-slogan {
+        font-size: 1rem;
+        font-weight: 600;
+        color: #2f2f2f;
+        letter-spacing: 0.08em;
+        text-transform: uppercase;
+      }
+
+      @keyframes shimmer {
+        0% {
+          transform: translateX(0);
+        }
+        100% {
+          transform: translateX(200%);
+        }
+      }
       </style>
     <script type="importmap">
   {
@@ -56,6 +128,14 @@
   </script>
   </head>
     <body class="bg-[#FFDA53] min-h-screen antialiased text-gray-800">
+      <div id="loading-overlay" class="loading-overlay">
+        <div class="loading-content">
+          <div class="loading-logo">
+            <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/690916718681773d7e063358_taple.png" alt="Taple" class="loading-logo-image" />
+          </div>
+          <p class="loading-slogan">Good times start here</p>
+        </div>
+      </div>
       <div class="container mx-auto max-w-md p-4 space-y-6">
         
         <!-- Header -->
@@ -364,7 +444,7 @@
         
         <!-- Footer -->
         <footer class="text-center py-4">
-          <p class="text-sm text-gray-700 flex items-center justify-center gap-2">
+          <p class="text-sm text-gray-500 flex items-center justify-center gap-3">
             <span class="lowercase">powered by</span>
             <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/690916718681773d7e063358_taple.png" alt="Taple" class="h-5 w-auto">
           </p>
