--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 
       .coupon-card {
         position: relative;
-        background: linear-gradient(135deg, #fff7f3 0%, #ffe8e0 100%);
-        border-radius: 20px;
-        border: 2px dashed rgba(185, 28, 28, 0.35);
+        background-color: #fff5c7;
+        border-radius: 28px;
+        border: 2px dashed #e9c66f;
         overflow: hidden;
       }
 
@@ -129,8 +129,8 @@
         content: '';
         position: absolute;
         top: 50%;
-        width: 32px;
-        height: 32px;
+        width: 40px;
+        height: 40px;
         border-radius: 50%;
         background: #ffffff;
         transform: translateY(-50%);
@@ -138,11 +138,11 @@
       }
 
       .coupon-card::before {
-        left: -16px;
+        left: -20px;
       }
 
       .coupon-card::after {
-        right: -16px;
+        right: -20px;
       }
       </style>
     <script type="importmap">
