--- a/index.html
+++ b/index.html
@@ -104,7 +104,6 @@
         font-weight: 600;
         color: #2f2f2f;
         letter-spacing: 0.08em;
-        text-transform: uppercase;
       }
 
       @keyframes shimmer {
@@ -124,26 +123,6 @@
         overflow: hidden;
       }
 
-      .coupon-card::before,
-      .coupon-card::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        background: #ffffff;
-        transform: translateY(-50%);
-        pointer-events: none;
-      }
-
-      .coupon-card::before {
-        left: -20px;
-      }
-
-      .coupon-card::after {
-        right: -20px;
-      }
       </style>
     <script type="importmap">
   {
@@ -191,7 +170,7 @@
 
           <!-- Stop The Clock Game -->
           <div class="bg-white rounded-2xl p-6 shadow-lg text-center">
-            <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69073aff3d343eacde7c18d2_stop_to_win_img_V3.png" alt="Stop the Clock game illustration" class="mx-auto mb-4 w-36 h-auto">
+            <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69096ae920221189def3416e_stop_to_win_img_V3_white.png" alt="Stop the Clock game illustration" class="mx-auto mb-4 w-36 h-auto">
             <h2 class="text-2xl font-bold text-gray-800 mb-2">Stop at 10 to Win!</h2>
             <p class="text-gray-600 mb-6">Think you have perfect timing? Stop it bang on 10.00 and score a FREE drink!</p>
             
@@ -208,7 +187,7 @@
 
           <!-- Spin Wheel Card -->
           <div class="bg-white rounded-2xl p-6 shadow-lg text-center">
-              <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69027089eb964b7b44618b35_spin_to_win_img_V2.png" alt="Spin the Wheel game illustration" class="mx-auto mb-4 w-36 h-auto">
+              <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69096ae9d77f40cb83c9f0a3_spin_to_win_img_V2_white.png" alt="Spin the Wheel game illustration" class="mx-auto mb-4 w-36 h-auto">
               <h2 class="text-2xl font-bold text-gray-800 mb-2">Spin to Win!</h2>
               <p class="text-gray-600 mb-6">Spin the wheel to win an instant prize!</p>
 
@@ -240,7 +219,7 @@
           <div class="bg-white rounded-2xl p-6 shadow-lg">
             <!-- Start Screen -->
             <div id="trivia-start-screen" class="text-center">
-              <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69027089e78531d205b04c42_trivia_img_V2.png" alt="Weekly Trivia illustration" class="mx-auto mb-4 w-36 h-auto">
+              <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69096ae8f4d5b80cd8d9197f_trivia_img_V2_white.png" alt="Weekly Trivia illustration" class="mx-auto mb-4 w-36 h-auto">
               <h2 class="text-2xl font-bold text-gray-800 mb-2">Weekly Trivia</h2>
               <p class="text-gray-500 mb-2">Challenge your mates to to trivia and climb the leaderboard. This week's trivia theme is:</p>
               <p id="trivia-theme" class="text-gray-800 font-semibold text-lg mb-6"></p>
@@ -321,7 +300,7 @@
           <!-- Birthday Club -->
           <div id="birthday-club-card" class="bg-white rounded-2xl p-6 shadow-lg text-center">
               <div id="birthday-initial-view">
-                  <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/6909075298fb28c0ac392106_birthday_img_V2.png" alt="Birthday Club illustration" class="mx-auto mb-4 w-36 h-auto">
+                  <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/69096ae960b6e875b28829f2_birthday_img_V2_white.png" alt="Birthday Club illustration" class="mx-auto mb-4 w-36 h-auto">
                   <h2 id="birthday-club-title" class="text-2xl font-bold text-gray-800 mb-2">Join The Birthday Club!</h2>
                   <p id="birthday-club-description" class="text-gray-600 mb-6"></p>
                   <form id="birthday-form" class="space-y-4">
@@ -473,7 +452,7 @@
         
         <!-- Footer -->
         <footer class="text-center py-4">
-          <p class="text-sm text-gray-500 flex items-center justify-center gap-3">
+          <p class="text-sm text-gray-900 flex items-center justify-center gap-1">
             <span class="lowercase">powered by</span>
             <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/690916718681773d7e063358_taple.png" alt="Taple" class="h-5 w-auto">
           </p>
@@ -495,7 +474,7 @@
                   <p class="text-sm text-gray-500 mb-6">Show this screen to staff to claim your prize</p>
                   <div class="space-y-3">
                       <button id="redeem-now-button" class="w-full bg-red-600 text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-red-700 transition-colors">
-                          Redeem Now
+                          Show staff to redeem
                       </button>
                       <button id="redeem-later-button" class="w-full bg-gray-200 text-gray-700 font-bold py-3 px-4 rounded-xl hover:bg-gray-300 transition-colors">
                           Redeem Later
@@ -508,8 +487,8 @@
 
               <!-- Confirmation View -->
               <div id="prize-confirmation-view" class="hidden">
-                  <h2 class="text-2xl font-bold text-gray-800 mb-4">Before your proceed</h2>
-                  <p class="text-gray-600 mb-6">Have you shown this screen to a staff member? This prize can only be redeemed once.</p>
+                  <h2 class="text-2xl font-bold text-gray-800 mb-4">Have you showed your screen to a staff member?</h2>
+                  <p class="text-gray-600 mb-6">Show your phone screen to a staff member to redeem. This prize can only be redeemed once.</p>
                   <div class="space-y-3">
                       <button id="confirm-redemption-button" class="w-full bg-green-600 text-white font-bold py-3 px-4 rounded-xl shadow-lg hover:bg-green-700 transition-colors">
                           Yes, redeem now
