--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
         font-size: 1rem;
         font-weight: 600;
         color: #2f2f2f;
-        letter-spacing: 0.08em;
       }
 
       @keyframes shimmer {
@@ -141,7 +140,7 @@
           <div class="loading-logo">
             <img src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/690916718681773d7e063358_taple.png" alt="Taple" class="loading-logo-image" />
           </div>
-          <p class="loading-slogan">Good times start here</p>
+          <p class="loading-slogan">Scan, play, win</p>
         </div>
       </div>
       <div class="container mx-auto max-w-md p-4 space-y-6">
