--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@
               <h2 class="text-2xl font-bold text-gray-800 mb-2">Spin to Win!</h2>
               <p class="text-gray-600 mb-6">Spin the wheel to win an instant prize!</p>
 
-              <div id="wheel-container" class="relative w-[280px] h-[280px] mx-auto mb-6">
+              <div
+                id="wheel-container"
+                class="relative w-[280px] h-[280px] mx-auto mb-6 cursor-pointer focus:outline-none focus:ring-4 focus:ring-red-200 rounded-full"
+                role="button"
+                tabindex="0"
+                aria-label="Spin the wheel"
+              >
                   <!-- SVG Pointer -->
                   <div class="absolute -top-1 left-1/2 -translate-x-1/2 z-20 drop-shadow-lg">
                       <svg width="40" height="50" viewBox="0 0 40 50">
@@ -204,6 +210,7 @@
                         src="https://cdn.prod.website-files.com/6105ed3c5ed41e814ab426cd/6909008489e79530e653fb6e_spinTheWheel_V2.svg"
                         alt="Prize wheel"
                         class="w-full h-full rounded-full select-none pointer-events-none"
+                        draggable="false"
                       />
                   </div>
               </div>
